# cboids

./: .gitmodules  CMakeLists.txt  README.md  build-c-release.bat  build-c.bat  build-odin.bat  build-release.bat  build.bat
c/: CMakeLists.txt  main.c  shader.vert
odin/: main.odin
src/: boids.c  boids.h  grid.c  grid.h  main.c  shader.frag  spatial_grid.c  spatial_hash_grid.c  spatial_hash_grid.h
